Kyverno/nodeport-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: ohmygod
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30080
  selector:
    hallo: welt
